external-crates/move/crates/move-compiler/tests/move_check/verification/single_module_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[WC00001]: DEPRECATED. will be removed
  ┌─ tests/move_check/verification/single_module_invalid.move:3:7
  │
3 │     #[verify_only]
  │       ^^^^^^^^^^^ The 'verify_only' attribute has been deprecated along with specification blocks

error[EC03004]: unbound type
  ┌─ tests/move_check/verification/single_module_invalid.move:8:23
  │
8 │     public fun foo(): Foo {
  │                       ^^^ Unbound type 'Foo' in current scope

error[EC03004]: unbound type
  ┌─ tests/move_check/verification/single_module_invalid.move:9:9
  │
9 │         Foo {}
  │         ^^^ Unbound type 'Foo' in current scope

warning[WC00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/verification/single_module_invalid.move:12:7
   │
12 │     #[verify_only]
   │       ^^^^^^^^^^^ The 'verify_only' attribute has been deprecated along with specification blocks

error[EC03005]: unbound unscoped name
   ┌─ tests/move_check/verification/single_module_invalid.move:17:24
   │
17 │     public fun baz() { bar() }
   │                        ^^^ Unbound function 'bar' in current scope
